--- a/app/src/main/res/layout/activity_hhxactivity.xml
+++ b/app/src/main/res/layout/activity_hhxactivity.xml
@@ -11,12 +11,12 @@
         android:layout_height="59dp"
         android:layout_marginStart="4dp"
         android:layout_marginBottom="4dp"
-        android:backgroundTint="#11171E"
+        android:backgroundTint="#003332"
         android:onClick="backToEducation"
         android:text="Tilbage"
         android:textColor="@color/white"
         android:textSize="8dp"
-        app:iconTint="#6C3737"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:rippleColor="#11171E" />
@@ -29,7 +29,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="40dp">
 
         <TextView
             android:id="@+id/textView8"
@@ -58,7 +59,7 @@
             android:text="På hhx-uddannelsen får du både undervisning i almene fag og i fag, der handler om virksomheders økonomi, afsætningsmuligheder og retslige forhold. Du lærer at gå i dybden med fagene, at tilegne dig ny viden og at forholde dig kritisk til denne viden."
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -77,7 +78,7 @@
 Når du har bestået din hhx-eksamen, får du et samlet eksamensbevis, hvori dit gennemsnit står. Du kan ikke senere forbedre dit gennemsnit."
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -100,7 +101,7 @@ Mange skoler arrangerer temadage og fællesarrangementer på tværs af klasser o
 "
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
