--- a/app/src/main/res/layout/activity_htxactivity.xml
+++ b/app/src/main/res/layout/activity_htxactivity.xml
@@ -11,12 +11,10 @@
         android:layout_height="59dp"
         android:layout_marginStart="4dp"
         android:layout_marginBottom="4dp"
-        android:backgroundTint="#11171E"
-        android:onClick="backToEducation"
+        android:backgroundTint="#003332"        android:onClick="backToEducation"
         android:text="Tilbage"
         android:textColor="@color/white"
         android:textSize="8dp"
-        app:iconTint="#6C3737"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:rippleColor="#11171E" />
@@ -29,7 +27,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="40dp">
 
         <TextView
             android:id="@+id/textView8"
@@ -58,7 +57,7 @@
             android:text="På det tekniske gymnasium får du både undervisning i almene fag og i fag, der handler om teknik, teknologi og kommunikation og it. Du lærer at gå i dybden med fagene, du lærer at tilegne dig ny viden, og du lærer at forholde dig kritisk til denne viden."
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -75,7 +74,7 @@
             android:text="I hvert skoleår er der både mundtlige og skriftlige eksaminer. I løbet af uddannelsen skal du til mindst 10 prøver, der alle tæller med i dit samlede eksamensresultat. Nogle vil være obligatoriske, fx skriftlig dansk og produktudvikling, og andre vil blive udtrukket. Når du har bestået din htx-eksamen, får du et samlet eksamensbevis, hvori dit gennemsnit står. Du kan ikke senere forbedre dit gennemsnit."
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -96,7 +95,7 @@
 "
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
