--- a/app/src/main/res/layout/activity_interests.xml
+++ b/app/src/main/res/layout/activity_interests.xml
@@ -11,8 +11,8 @@
 
 
     <LinearLayout
-        android:layout_width="407dp"
-        android:layout_height="324dp"
+        android:layout_width="405dp"
+        android:layout_height="353dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
 
@@ -21,9 +21,10 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
 
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="144dp"
             android:orientation="horizontal">
 
 
@@ -45,12 +46,43 @@
                 android:layout_weight="1"
                 android:onClick="toKunst"
                 app:srcCompat="@drawable/musik_app_ikon" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="38dp">
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="148dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:fontFamily="monospace"
+                android:gravity="center"
+                android:text="Naturvidenskab"
+                android:textSize="13sp"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/textView18"
+                android:layout_width="138dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="40dp"
+                android:fontFamily="monospace"
+                android:gravity="center"
+                android:text="Musik"
+                android:textSize="13sp"
+                android:textColor="@color/white" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
 
-            android:layout_height="wrap_content"
+            android:layout_height="144dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -72,6 +104,38 @@
                 android:onClick="toSamfundsvidenskab"
                 app:srcCompat="@drawable/samf_app_ikon" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="26dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView24"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_weight="1"
+                android:fontFamily="monospace"
+                android:gravity="center"
+                android:text="Sprog"
+                android:textSize="13sp"
+                android:textColor="@color/white" />
+
+
+            <TextView
+                android:id="@+id/textView25"
+                android:layout_width="35dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="40dp"
+                android:layout_weight="1"
+                android:fontFamily="monospace"
+                android:gravity="center"
+                android:text="Samfundsfag"
+                android:textSize="13sp"
+                android:textColor="@color/white" />
         </LinearLayout>
 
     </LinearLayout>
